src/test/deca/context/invalid/oracle/and_op_with_wrong_type3.deca
{
    true && 50.0;
}